--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <!-- result message -->
     <string name="connection_created_successfully">Connection created successfully</string>
     <string name="fail_on_create_connection">Fail on create connection</string>
+    <string name="connection_deleted_successfully">Connection deleted successfully</string>
 
     <!-- Activity title -->
     <string name="new_connection">New connection</string>
@@ -18,4 +19,6 @@
     <!-- action button -->
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
 </resources>
